--- a/src/components/contact/ContactPage.scss
+++ b/src/components/contact/ContactPage.scss
@@ -15,7 +15,7 @@
       flex-direction: row;
       align-items: flex-start;
       justify-content: space-between;
-      margin-bottom:100%;
+      margin-bottom:120%;
       overflow-y: hidden;
       //padding-top: 20%;
       margin-top: 20%;
@@ -30,7 +30,7 @@
       display: table-cell;
       max-height: 90%;
       padding-top: 10%;
-      }
+
 
       .info-map {  
         background: #000;
@@ -54,6 +54,9 @@
           
         }
       }
+      }
+
+      
 
 .contact-form {
   
@@ -190,27 +193,32 @@
 }
 
 
-  @media screen and (max-width: 767px) {
+
+
+
+
+  
+  @media (max-width:1000px) {
     .contact-page{
-      padding: 20px 0px 40px 0px;
+      padding-left: 12%;
       width: 100%;
-      margin-bottom: 800px;
+      height: 100%;
+      
     
         .main-div{
           flex-direction: column;
           padding: 50px 5px;
-          
+          margin-bottom: 50%;
           
           .contact-text-zone{
             position: relative;
-            width: 90%;
-            transform: translateX(-20px);
+            width: 50%;
+            transform: translateX(-50px);
             padding-bottom: 50px;
-            //padding-top: 25%;
 
 
             .contact-form {
-              width: 90%;
+              width: 100%;
               margin-top: 20px;
             }
 
@@ -218,15 +226,12 @@
               position: relative;
               top: 0;
               right: 0;
-             
-              width: 110%;
+              width: 90%;
               display: flex;
               flex-direction: column;
               align-self: center;
               align-items: flex-start;
-              padding-left: 30px;
               margin-top: 50px;
-              transform: translateX(-50px) !important;
               
             
               span {
@@ -258,16 +263,14 @@
 
         img{
           position: fixed;
-          padding-top: 50px;
-          transform: translateX(-50px) !important;
-          
+          top: -10%;
+          transform: translateX(-130px) !important;
         }
 
         .logo-svg {
           position: fixed;
-          padding-top: 50px;
-          transform: translateX(-50px) !important;
-
+          top: -10%;
+          transform: translateX(-130px) !important;
         }
               
       }
@@ -275,79 +278,77 @@
     }
   }
 
-  
-  @media screen and (max-width:1000px) and (orientation:landscape){
+
+
+
+
+
+
+
+
+  @media (max-width: 767px) {
     .contact-page{
-      padding-left: 12%;
+      padding: 0px;
       width: 100%;
-      height: 100%;
-      
+      margin-bottom: 800px;
     
         .main-div{
           flex-direction: column;
-          padding: 50px 5px;
-          margin-bottom: 20%;
+          padding: 50px 30px;
+          
           
           .contact-text-zone{
             position: relative;
-            width: 50%;
-            transform: translateX(-50px);
+            width: 95%;
             padding-bottom: 50px;
+            //padding-top: 25%;
 
 
             .contact-form {
-              width: 90%;
+              width: 100%;
               margin-top: 20px;
+            }
+
+            .info-map {
+              position: relative;
+              top: 0;
+              right: 0;
+             
+              width: 88%;
+              display: flex;
+              flex-direction: column;
+              align-self: center;
+              align-items: flex-start;
+              padding-left: 20px;
+              margin-top: 50px;
+              
+            
+              span {
+                font-size: 16px;
+                color: #ffd700;
+                display: block;
+                padding-top: 10px;
+                
+              }
             }
         }
 
         .main-div-right{
           width: 100%;
-          position: relative;
+          position: relative; 
         
-        .map-wrap {
-          display: contents;
-          width: 80%;
-          margin-top: -3%;
-          position: absolute;
-          right: 10%;
-          top:120%;
-          height: 300px;
-          align-self: center;
-        }  
         
-        .info-map {
-          position: relative;
-          top: 0;
-          right: 0;
-          width: 100%;
-          display: flex;
-          flex-direction: column;
-          align-self: center;
-          align-items: flex-start;
-          padding-left: 80px;
-          margin-top: 50px;
-          
-        
-          span {
-            font-size: 16px;
-            color: #ffd700;
-            display: block;
-            padding-top: 10px;
-            
-          }
-        }
 
         img{
           position: fixed;
-          padding-top: 50px;
-          transform: translateX(-130px) !important;
+          top: -5%;
+          transform: translateX(-50px) !important;
         }
 
         .logo-svg {
           position: fixed;
-          padding-top: 50px;
-          transform: translateX(-130px) !important;
+          top: -5%;
+          transform: translateX(-50px) !important;
         }
               
       }
