--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -33,6 +33,7 @@
     transform: none;
   }
   
+  
   .footer-brand-container,
   .footer-pages-container,
   .footer-contact-container {
@@ -183,55 +184,17 @@
 
 }
 
-@media screen and (max-width: 767px){
+
+
+
+
+
+
+
+
+@media (max-width:1000px) {
   .footer{
-    padding-left: 5%;
-    height: fit-content;
-    min-height: fit-content;
-    margin-bottom: 0;
-    padding-bottom: 100px;
-    margin-top: 200px;
-    
-  .footer-brand-container{
-    padding-top: 45%;
-    width: 90%;
-    
-
-    h3 {
-      margin-top: 22px;
-      font-size: 24px;
-      letter-spacing: 1px;
-      margin-left: 20px;
-    }
-
-    p{
-        text-align: left;
-    }
-
-    .social-icons-container {
-      margin-top: 20px;
-      display: flex;
-      flex-direction: row;
-      
-    }
-  }
-
-  .footer-pages-container{
-    width: 40% !important;
-    padding-right: 0px;
-    padding-left: 0;
-    margin-left: 0;
-  }
-
-  .footer-contact-container{
-    width: 80% !important;
-    
-  }
-  }
-}
-
-@media screen and (max-width:1000px) and (orientation:landscape){
-  .footer{
+    padding-left: 25%;
     height: 350px;
     
 
@@ -321,5 +284,100 @@
     
     
   
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media (max-width: 767px){
+  .footer{
+    padding-left: 5%;
+    height: fit-content;
+    min-height: fit-content;
+    margin-bottom: 0;
+    padding-bottom: 100px;
+    margin-top: 200px;
+    
+  .footer-brand-container{
+    padding-top: 35%;
+    width: 90%;
+    transform: none;
+    
+
+    h3 {
+      margin-top: 22px;
+      font-size: 24px;
+      letter-spacing: 1px;
+      margin-left: 20px;
+    }
+
+    p{
+        text-align: left;
+    }
+
+    .social-icons-container {
+      margin-top: 20px;
+      display: flex;
+      flex-direction: row;
+      
+    }
+
+    .footer-brand-container-header{
+      justify-content: flex-start;
+    }
+  }
+
+  .footer-pages-container{
+    width: 40% !important;
+    padding-right: 0px;
+    transform: none;
+    padding-left: 0;
+
+    h3{
+      margin-left: 0px;
+    }
+    
+      ul {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        text-align: left;
+        padding-left: 5px;
+      }
+  }
+
+  .footer-contact-container{
+    width: 80% !important;
+    transform: none;
+
+    h3{
+      margin-left: 0;
+    }
+      .footer-contact-container-contact{
+          padding-left: 5px;
+
+  
+      }
+    
+    
+  }
   }
 }
