--- a/src/components/home/logo/Logo.scss
+++ b/src/components/home/logo/Logo.scss
@@ -29,7 +29,7 @@
       height: fit-content;
       width: 100%;
       opacity: 0;
-      object-fit: cover;
+      object-fit: containgit ;
       animation: fadeIn 2s ease-in-out 4s forwards;
       
     }
