--- a/src/components/home/logo/Logo.scss
+++ b/src/components/home/logo/Logo.scss
@@ -26,10 +26,10 @@
       bottom: auto;
       left: 0;
       margin: auto;
-      height: fit-content;
+      height: auto;
       width: 100%;
       opacity: 0;
-      object-fit: containgit ;
+      object-fit: contain;
       animation: fadeIn 2s ease-in-out 4s forwards;
       
     }
